cleaning up js files

--- a/index.html
+++ b/index.html
@@ -47,10 +47,8 @@
     </main>
 
     <script type="text/javascript" src="assets/js/jquery-3.6.0.min.js"></script>
-    <script type="text/javascript" src="assets/js/swiper.min.js"></script>
-    <script type="text/javascript" src="assets/js/isotope.min.js"></script>
-    <script type="text/javascript" src="assets/js/countdown.js"></script>
-    <script type="text/javascript" src="assets/js/creote-extension.min.js"></script>
+    <script type="text/javascript" src="assets/js/countdown.min.js"></script>
+    <script type="text/javascript" src="assets/js/script.js"></script>
 </body>
 
 </html>
