--- a/index.html
+++ b/index.html
@@ -11,44 +11,44 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&family=Hind:wght@300;400;500;600;700&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@700&family=League+Spartan:wght@400;600&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/style.css">
 </head>
 
 <body>
     <main>
         <section class="coming-soon">
-            <img src="assets/images/logo.png" alt="logo">
-            <h1>Site en construction !</h1>
-            <p>Notre site web est en construction et sera disponible dans :</p>
+            <img src="assets/logo.png" class="logo" alt="logo">
+            <h1 class="title">Site en construction !</h1>
+            <p class="description">Notre site web est en construction et sera disponible dans :</p>
             <div class="countdown" data-date="Feb 28 2025 23:59:59">
                 <div class="item">
-                    <span data-days>0</span>
+                    <strong data-days>0</strong>
                     <p>jours</p>
-                    <small>:</small>
+                    <!-- <small>:</small> -->
                 </div>
                 <div class="item">
-                    <span data-hours>0</span>
+                    <strong data-hours>0</strong>
                     <p>heures</p>
-                    <small>:</small>
+                    <!-- <small>:</small> -->
                 </div>
                 <div class="item">
-                    <span data-minutes>0</span>
+                    <strong data-minutes>0</strong>
                     <p>minutes</p>
-                    <small>:</small>
+                    <!-- <small>:</small> -->
                 </div>
                 <div class="item">
-                    <span data-seconds>0</span>
+                    <strong data-seconds>0</strong>
                     <p>secondes</p>
                 </div>
             </div>
         </section>
     </main>
 
-    <script type="text/javascript" src="assets/js/jquery-3.6.0.min.js"></script>
-    <script type="text/javascript" src="assets/js/countdown.min.js"></script>
-    <script type="text/javascript" src="assets/js/script.js"></script>
+    <script type="text/javascript" src="assets/jquery-3.6.0.min.js"></script>
+    <script type="text/javascript" src="assets/countdown.min.js"></script>
+    <script type="text/javascript" src="assets/script.js"></script>
 </body>
 
 </html>
