--- a/index.html
+++ b/index.html
@@ -6,13 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <title>Vins Jour et Nuit</title>
+    <!-- Favicons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <!-- Meta description -->
     <meta name="description" content="Un voyage sensoriel à travers les richesses du Togo">
-
+    <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@700&family=League+Spartan:wght@400;600&display=swap"
         rel="stylesheet">
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="assets/style.css">
 </head>
 
@@ -42,7 +49,7 @@
             </div>
         </section>
     </main>
-
+    <!-- Custom JS -->
     <script type="text/javascript" src="assets/jquery-3.6.0.min.js"></script>
     <script type="text/javascript" src="assets/countdown.min.js"></script>
     <script type="text/javascript" src="assets/script.js"></script>
