--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@700&family=League+Spartan:wght@400;600&display=swap"
         rel="stylesheet">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="assets/style.min.css">
 </head>
 
 <body>
@@ -52,7 +52,7 @@
     <!-- Custom JS -->
     <script type="text/javascript" src="assets/jquery-3.6.0.min.js"></script>
     <script type="text/javascript" src="assets/countdown.min.js"></script>
-    <script type="text/javascript" src="assets/script.js"></script>
+    <script type="text/javascript" src="assets/script.min.js"></script>
 </body>
 
 </html>
